name:                concurrent-stack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/concurrent-stack#readme
license:             LGPL-3
license-file:        LICENSE
author:              Richard Lupton
maintainer:          example@example.com
copyright:           2017 Richard Lupton
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Concurrent.Stack
  other-modules:       Lib.Prelude
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , async
                     , stm
                     , transformers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite concurrent-stack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , concurrent-stack
                     , protolude >= 0.1.6 && < 0.2
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/rlupton20/concurrent-stack
